# agent-configs

./: .gitignore  .gitmodules  .skill-lock.json  AGENTS.md  NOTICE.md  README.kr.md  README.md  install_locked_skills.py  publish-skills.py  publish_skills.py  pyproject.toml  pyrefly.toml  ruff.toml  setup.sh  setup_agents.py
.omp/: lsp.yaml
in-progress/: AGENTS.md
in-progress/explore-and-frame/: README.md  SKILL.kr.md  SKILL.md
in-progress/github-pr-review/: README.kr.md  README.md  SKILL.kr.md  SKILL.md
in-progress/parallel-execution/: README.md  SKILL.kr.md  SKILL.md
in-progress/quality-gates/: README.kr.md  README.md  SKILL.kr.md  SKILL.md  skill.kr.md
in-progress/resolving-merge-conflicts/: README.kr.md  README.md  SKILL.kr.md  SKILL.md
in-progress/root-cause-debugging/: README.kr.md  README.md  SKILL.kr.md  SKILL.md  skill.kr.md
in-progress/test-driven-development/: README.kr.md  README.md  SKILL.kr.md  SKILL.md
references/: INTERESTED_SKILLS_TAXONOMY.ko.md  README.md  SKILL_SUMMARY.ko.md
skills/: .gitignore
skills/explore-and-frame/: README.kr.md  README.md  SKILL.kr.md  SKILL.md
skills/github-pr-review/: README.kr.md  README.md  SKILL.kr.md  SKILL.md
skills/parallel-execution/: README.kr.md  README.md  SKILL.kr.md  SKILL.md
skills/quality-gates/: README.md  SKILL.kr.md  SKILL.md
skills/resolving-merge-conflicts/: README.kr.md  README.md  SKILL.kr.md
skills/root-cause-debugging/: README.kr.md  README.md  SKILL.kr.md  SKILL.md
skills/test-driven-development/: README.kr.md  README.md  SKILL.kr.md  SKILL.md
(+36 files in other folders)
